--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/tungsten-cat/mathcombat.cyclic.app#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.0",
+    "express": "^4.18.2",
+    "passport": "^0.6.0",
+    "winston": "^3.9.0"
   }
 }
